# ai_call_agent

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  POETRY_SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt  run.py  run.sh  setup.bat  setup.sh  voice_agent.db  voice_agent_architecture.drawio
app/: main.py
app/api/routes/: agents.py  calls.py  knowledge_base.py  phone_numbers.py  tools.py
app/core/: agent_factory.py  call_manager.py  knowledge_service.py  tool_executor.py
app/models/: database.py
app/schemas/: agent.py  call.py  knowledge_base.py  tool.py
app/workers/: call_worker.py
demo/: README.md  call_agent.py  outbound_call.json  prompt.py  run_outbound_call.py
